Fixed css overflowing...

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
 .card-4 {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .card-title {
@@ -66,7 +67,8 @@ ul {
 }
 
 .custom-scrollbar {
-  overflow: auto;
+  overflow-y: auto; 
+  max-height: 100%; 
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
 }
@@ -95,6 +97,7 @@ ul {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  margin-top: 12px;
 }
 
 #book-btn {
@@ -302,7 +305,7 @@ input {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 10px;
-  overflow: auto;
+  overflow-y: scroll;
   border: none;
   border-radius: 12px;
 }
@@ -360,6 +363,7 @@ input {
   text-align: center;
 }
 
+
 #items > li {
   display: flex;
   justify-content: center;
@@ -367,22 +371,13 @@ input {
   text-align: center;
   color: #f2f0ee;
   width: 100%;
-  min-height: 60px;
+  height: 60px;
   font-size: 16px;
-  margin: 3px;
   background-color: #202020;
   border: solid 3px #e4b7a4;
   border-radius: 12px;
   overflow: hidden;
-}
-
-#shoppingList {
-  overflow: auto;
-  max-width: 100%;
-  max-height: 665px;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
+  margin-bottom: 12px;
 }
 
 
